--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://cdn.jsdelivr.net/gh/oscarmorrison/md-page@latest/md-page.js"></script><noscript>
 
-### Index
+### fbook
 
 * [0 - Language Agnostic](#0---language-agnostic)
     * [Архитектура приложений](#архитектура-приложений)
@@ -635,3 +635,5 @@
 * [Beyond Linux From Scratch (version 2011-12-30)](http://rus-linux.net/nlib.php?name=/MyLDP/BOOKS/BLFS-ru/blfs-ru-index.html) - The BLFS Development Team, `trl.:` Н.Ромоданов, `trl.:` Сергея Каминского, `trl.:` Александра Андреева
 * [Linux From Scratch (version 6.8)](http://rus-linux.net/nlib.php?name=/MyLDP/BOOKS/LFS-BOOK-6.8-ru/lfs-6.8-ru-index.html)
 * [The Linux Kernel Module Programming Guide](http://www.opennet.ru/docs/RUS/lkmpg26) - Peter Jay Salzman, Michael Burian, Ori Pomerantz
+
+> Source: https://github.com/EbookFoundation/free-programming-books
