--- a/index.html
+++ b/index.html
@@ -636,4 +636,4 @@
 * [Linux From Scratch (version 6.8)](http://rus-linux.net/nlib.php?name=/MyLDP/BOOKS/LFS-BOOK-6.8-ru/lfs-6.8-ru-index.html)
 * [The Linux Kernel Module Programming Guide](http://www.opennet.ru/docs/RUS/lkmpg26) - Peter Jay Salzman, Michael Burian, Ori Pomerantz
 
-> Source: https://github.com/EbookFoundation/free-programming-books
+> Source: [free-programming-books](https://github.com/EbookFoundation/free-programming-books)
